add install custom modules